# moviedb

./: Dockerfile  README.md  alembic.ini  common.env  docker-compose.yml  pyproject.toml  runserver.py
alembic/: env.py
alembic/versions/: 40390c2f5080_create_user_and_movie_tables.py  ece9bc183ea7_populate_db.py
movie_front/: package-lock.json  package.json
moviedb/: app.py  middleware.py  schema.py  settings.py
moviedb/movie/: __init__.py  base_repository.py  database.py  exceptions.py  models.py  repository.py  resolvers.py  utils.py
moviedb/schema/: schema.graphql
